<resources>
    <string name="app_name">MoneyFlow</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email completions.</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="item_menu_refresh_text">Refresh</string>
    <string name="message_add_new_expense_dialog">Add new expense</string>
    <string name="title_add_new_expense_dialog">Add expense</string>
    <string name="positive_button_dialog">Save</string>
    <string name="negative_button_dialog">Cancel</string>
    <string name="close_button_dialog">Close</string>
    <string name="hint_text">Title</string>
    <string name="hint_volume">00.00</string>
    <string name="critical">Critical</string>
    <string name="button_show_expenses_text">Show all Expenses</string>

    <string name="title_tab_cash_flow">CashFlow</string>
    <string name="title_tab_expenses">Expenses</string>
    <string name="title_tab_incomes">Incomes</string>
    <string name="message_add_new_income_dialog">Add new income</string>
    <string name="title_add_new_income_dialog">Add income</string>
    <string name="message_change_expense_dialog">Change spend</string>
    <string name="title_change_expense_dialog">Change expense</string>
    <string name="delete_button_dialog">Delete</string>
    <string name="title_change_incomes_dialog">Change income</string>
    <string name="spents_by_categories">Spents by categories:</string>
    <string name="title_category_dialog">Spents by category</string>
    <string name="item_submenu_text">submenu</string>
    <string name="item_menu_recalc_text">Recalculate</string>
    <string name="item_edit_category_text">Edit categories</string>
    <string name="title_change_categories_dialog">Change categories</string>
    <string name="add_button_dialog">Add</string>
    <string name="hint_category">Category</string>
    <string name="title_add_new_category_dialog">Add new category</string>
    <string name="item_add_fk_text">Add FK</string>


</resources>
