<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_sub"
        android:icon="@drawable/ic_menu_moreoverflow"
        android:title="@string/item_submenu_text"
        app:showAsAction="ifRoom" >
        <menu>
            <item
                android:id="@+id/item_reCalc"
                android:icon="@android:drawable/ic_menu_manage"
                android:title="@string/item_menu_recalc_text"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/item_change_category"
                android:icon="@android:drawable/ic_menu_edit"
                android:title="@string/item_edit_category_text"
                app:showAsAction="ifRoom"
                />
            <item
                android:id="@+id/item_add_fk"
                android:icon="@android:drawable/ic_menu_edit"
                android:title="@string/item_add_fk_text"
                app:showAsAction="ifRoom"
                />

        </menu>
    </item>
    <item
        android:id="@+id/item_refresh"
        android:icon="@drawable/ic_menu_refresh"
        android:title="@string/item_menu_refresh_text"
        app:showAsAction="ifRoom" />
</menu>